# ssr

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  Regression-GP-rolling-Copy1.ipynb  Regression-GP-rolling.ipynb  Regression.ipynb  STS.ipynb  STS_8888.ipynb  STS_8889.ipynb  STS_just_temp_8890-Copy1.ipynb  STS_just_temp_8890.ipynb  Scratch.ipynb  data.py  open_ssr.sh  pyproject.toml  regression_projectupdate.ipynb  results_gp_temperature_34.pickle  results_gp_temperature_34_skills.npy  results_gp_temperature_34_temps.npy  results_sts_temperature_34.pickle  results_sts_temperature_34_skills.npy  results_sts_temperature_34_temps.npy  run_rolling_gp.py  run_rolling_sts.py  singularity_run_container.sh  slurm_run_container.sh  utils.py
trash/: Regression-GP-oldcode.ipynb  Regression-STS-oldcode.ipynb  gp_regression.py  sts.py
