[tool.poetry]
name = "ssr"
version = "0.1.0"
description = ""
authors = ["dxy <daniel.yang17@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
numpy = "^1.20.2"
scipy = "^1.6.2"
opencv-python = "^4.5.1"
matplotlib = "^3.4.1"
jupyter = "^1.0.0"
scikit-learn = "^0.24.1"
pandas = "^1.2.3"
seaborn = "^0.11.1"
plotly = "^4.14.3"
h5py = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
